k8s-platform-v2/04-catalog/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unity-catalog-unitycatalog
spec:
  rules:
    - host: unity.$(INGRESS_DOMAIN)
      http:
        paths:
          - path: "/api"
            pathType: "Prefix"
            backend:
              service:
                name: "unity-catalog-unitycatalog-server"
                port:
                  name: api
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "unity-catalog-unitycatalog-ui"
                port:
                  name: ui
